--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <title>Инструменты для Яндекс карт</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-  <link href="//yandex.st/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
+  <link href="http://yandex.st/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
 
-  <script src="//yandex.st/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
-  <script src="https://api-maps.yandex.ru/2.176/?load=package.full&lang=ru_RU&amp;apikey=api_key" type="text/javascript"></script>
+  <script src="http://yandex.st/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
+  <script src="https://api-maps.yandex.ru/2.176/?load=package.full&lang=ru_RU&apikey=api_key" type="text/javascript"></script>
 
   <script src="map-tool.js" type="text/javascript"></script>
   <script type="text/javascript">
